# software-factory-poc

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  MODULES.md  Makefile  QA_REPORT.md  README.md  build-vars.sh  docker-compose.yml  migration_fix.py  move_files.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  start_agent.sh  test_output.txt  test_output_2.txt  test_output_3.txt  verify_12_line.py  vulture_whitelist.py
.agents/: CONSTITUTION.md
.agents/rules/: 00_project_map.md  10_clean_architecture.md  10_style_conventions.md  20_clean_code.md  20_safety_and_tokens.md  30_dual_flow_contract.md  30_mvp_flow_contract.md  31_scaffolder_agent_dual_flow.md  32_code_reviewer_agent_dual_flow.md  40_definition_of_done.md  50_debug_playbook.md  60_observability_and_sre.md  90_mcp_coexistence_litellm.md  99_docker_execution.md
.agents/skills/agentic-orchestration/: SKILL.md
.agents/skills/application-auditor/: SKILL.md
.agents/skills/domain-auditor/: SKILL.md
.agents/skills/infrastructure-auditor/: SKILL.md
.agents/skills/integration-testing/: SKILL.md
.agents/skills/litellm-integration/: SKILL.md
.agents/skills/mcp-integration/: SKILL.md
.agents/skills/observability-sre/: SKILL.md
.agents/skills/python-coding/: SKILL.md
.agents/skills/python-quality-gate/: SKILL.md
.agents/skills/security-guardrails/: SKILL.md
.agents/skills/unit-testing/: SKILL.md
.agents/workflows/: 01_bootstrap_repo.workflow.md  02_jira_integration.workflow.md  03_contract_parsing.workflow.md  04_template_engine.workflow.md  05_gitlab_integration.workflow.md  06_end_to_end_demo.workflow.md
.claude/: settings.local.json
.container-bin/: chown
.gemini/: GEMINI.md
.github/workflows/: deploy_ec2.yml
assets/templates/nestjs-base/: README.md
scripts/: check_health.sh  down.sh  install_systemd_service.sh  manual_deploy_to_ec2.sh  reproduce_issue.py  run_dev.sh  show_routes.py  simulate_jira_webhook.py  test.sh  test_all.sh  test_jira_rendering.py  up.sh  verify_confluence_mock.py  verify_description_format.py  verify_genai_scaffolding.py  verify_llm_refactor.py
src/software_factory_poc/: main.py  scripts.py
src/software_factory_poc/api/: __init__.py  app_factory.py  jira_trigger_router.py
src/software_factory_poc/config/: __init__.py  allowlists_config.py  settings_pydantic.py
src/software_factory_poc/configuration/: __init__.py  confluence_settings.py  gitlab_settings.py  jira_settings.py  llm_settings.py  main_settings.py  scaffolding_settings.py  scripts.py
src/software_factory_poc/contracts/: __init__.py  artifact_result_model.py  jira_webhook_models.py  scaffolding_contract_model.py  scaffolding_contract_parser_service.py
src/software_factory_poc/knowledge/: architecture_knowledge_service.py
src/software_factory_poc/observability/: __init__.py  logger_factory_service.py  redaction_service.py
src/software_factory_poc/orchestration/: __init__.py  scaffold_orchestrator_service.py  step_runner_service.py
src/software_factory_poc/policy/: poc_policy_service.py
src/software_factory_poc/scaffolding/: genai_scaffolding_service.py
src/software_factory_poc/store/: idempotency_key_builder_service.py  idempotency_store_file_adapter.py  run_result_store_file_adapter.py
src/software_factory_poc/templates/: __init__.py  template_file_loader_service.py  template_manifest_model.py  template_registry_service.py  (+1 more)
tests/: conftest.py  test_genai_service.py  test_orchestrator_gitlab_failure.py  test_orchestrator_happy_path.py  test_orchestrator_invalid_contract.py  test_policy.py  test_scaffolding_contract_parser.py  test_scaffolding_contract_validation.py  test_template_renderer.py
tests/integration/: diagnose_confluence_real.py  test_code_review_e2e_flow.py  test_code_review_flow_trigger.py  test_code_review_webhook.py  test_confluence_paths.py  test_confluence_search_resilience.py  test_e2e_mocked_io.py  test_gitlab_real_smoke.py  test_jira_abort_flow.py  test_jira_flow.py  test_jira_router_failure.py  test_jira_scaffolding_flow.py  test_jira_webhook_filtering.py  test_webhook_entrypoint.py  test_webhook_flow.py  test_wiring.py
tests/unit/: test_artifact_parser.py  test_branch_creation.py  test_branch_validation.py  test_commit_flow.py  test_jira_mapper.py  test_jira_provider.py  test_jira_transition.py  test_llm_gateway.py  test_mr_creation.py  test_payload_preparation.py  test_reporter_adf.py  test_research_agent.py  test_security_policy.py
tests/verification/: test_code_reviewer_agent_integration.py  test_confluence_provider_context.py  test_jira_description_assembly.py  test_jira_mapper_strict.py  test_jira_provider_defensive_cleaning.py  test_scaffolding_agent_integration.py  test_scaffolding_reporting.py  verify_full_flow.py
(+756 files in other folders)
