[project]
name = "software-factory-poc"
version = "0.3.0"
description = "PoC 1 sprint: Jira-triggered Scaffold Engineer"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Software Factory Team" }]

dependencies = [
    "fastapi>=0.109.0", # Latest stable
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0.1",
    "jinja2>=3.1.3",
    "tenacity>=8.2.3",
    "openai>=1.12.0",
    "beautifulsoup4>=4.12.0",
    "google-genai>=0.3.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.2",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
# Entry points require implementation in src/software_factory_poc/main.py or scripts.py
sf-poc-dev = "software_factory_poc.main:dev"
sf-poc-test = "software_factory_poc.scripts:test"
sf-poc-lint = "software_factory_poc.scripts:lint"
sf-poc-format = "software_factory_poc.scripts:format"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/software_factory_poc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
# Lite mode
disallow_untyped_defs = false
check_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py312"
