[project]
name = "software-factory-poc"
version = "0.3.3"
description = "PoC 1 sprint: Jira-triggered Scaffold Engineer"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Software Factory Team" }]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
    "mcp>=1.2.0",
    "litellm>=1.30.0",
    "structlog>=24.1.0",
    "asgi-correlation-id>=4.3.0",
    "colorama>=0.4.6",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.2",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
# Entry points require implementation in src/software_factory_poc/main.py or scripts.py
sf-poc-dev = "software_factory_poc.main:dev"
sf-poc-test = "software_factory_poc.scripts:test"
sf-poc-lint = "software_factory_poc.scripts:lint"
sf-poc-format = "software_factory_poc.scripts:format"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/software_factory_poc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
# Lite mode
disallow_untyped_defs = false
check_untyped_defs = false

# Ruff config lives in ruff.toml (canonical source)